[update] image update

--- a/dailydiary_front/public/index.html
+++ b/dailydiary_front/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://image.flaticon.com/icons/png/512/129/129038.png" />
+    <link rel="icon" href="C:\Users\HanSeungHeon\Desktop\Project\Web\dailydiary\dailydiary_front\src\resource\notepad.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
