--- a/dailydiary_front/public/index.html
+++ b/dailydiary_front/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="C:\Users\HanSeungHeon\Desktop\Project\Web\dailydiary\dailydiary_front\src\resource\notepad.png" />
+    <link rel="icon" href="https://github.com/tmdgjs/DailyDiary/blob/master/dailydiary_front/src/resource/notepad.png?raw=true" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
